--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,16 @@
-
+services:
+  - type: web
+    name: telegram-complaints-bot
+    env: python
+    plan: free
+    buildCommand: ""
+    startCommand: "python main.py"
+    envVars:
+      - key: BOT_TOKEN
+        value: your-bot-token-here
+      - key: Main_Group_ID
+        value: -4949122709
+      - key: Admin_Group_ID
+        value: -1003131818226
+      - key: Admin_Group_topic_ID
+        value: 2
